Fixed label alignment.

--- a/css/sii-VSUP.ADDRESS_SDO.css
+++ b/css/sii-VSUP.ADDRESS_SDO.css
@@ -8,7 +8,7 @@
     font-size: 10;
     font-style: normal;
     font-weight: normal;
-    label-anchor: 0.5, 0.5;
+    label-anchor: 0.5 0.5;
     label-rotation:0;
     halo-color:#FFFFFF;
     font-fill:#999999;
